Fixes on the Unwanted Gap on the CSS

--- a/PublicWebsite/themekit/css/skin.css
+++ b/PublicWebsite/themekit/css/skin.css
@@ -18,7 +18,28 @@
 
 */
 
+/* 
 
+# GLOBAL SECTION
+===================================================================
+
+*/
+main > section > .container {
+    padding-top: 36px;
+    padding-bottom: 30px;
+}
+
+
+/* 
+
+# SPACE
+===================================================================
+
+*/
+
+hr.space-lg {
+    height: 40px;
+}
 
 /*
 
@@ -53,15 +74,23 @@
 ===================================================================
 
 */
-
-
-
-/*
+.menu-cnt > ul > li > a {    
+    font-size: 15px;    
+}
+.menu-mini > .container > ul > li {
+    font-weight: 700;
+}
+    /*
 
 # FOOTER
 ===================================================================
 
 */
+
+    footer > .container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
 
 
@@ -72,6 +101,11 @@
 */
 
 
+.box-steps-vertical {
+    display: block;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
 
 /*
 
@@ -109,7 +143,14 @@ Small devices (landscape phones, less than 768px)
 */
 
 @media (max-width: 767.98px) {
-
+    .footer-bar > .container {
+    text-align:center
+    }
+        .footer-bar > .container > span:last-child {
+        content: "\a";
+        white-space: pre;
+        float:none
+    }   
 }
 
 /*
